# WallzAI-code

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
envs/quoridor/: engine.py  quoridor_env.py  strategic_env.py
envs/wrappers/: self_play_wrapper.py
logs/MaskablePPO_1/: events.out.tfevents.1782900260.MacBook-Pro.local.33628.0
logs/MaskablePPO_2/: events.out.tfevents.1782900574.MacBook-Pro.local.34498.0
logs/MaskablePPO_3/: events.out.tfevents.1782900927.MacBook-Pro.local.35393.0
logs/MaskablePPO_4/: events.out.tfevents.1782900932.MacBook-Pro.local.35439.0
logs/MaskablePPO_5/: events.out.tfevents.1782901397.MacBook-Pro.local.36478.0
logs/MaskablePPO_6/: events.out.tfevents.1782902859.MacBook-Pro.local.40219.0
logs/eval/: evaluations.npz
scripts/: browser_agent.py  browser_agent_clean.py  browser_agent_manual_drag.py  browser_agent_model.py  browser_agent_moves.py  browser_agent_safe.py  evaluate.py  play_browser.py  train.py  train_stage8.py  visualize.py
tests/: test_legal_actions.py  test_pathfinding.py  test_rules.py  test_training_smoke.py
wallz_ai/: __init__.py
wallz_ai/agents/: __init__.py  heuristic_bot.py  mcts.py  model.py  ppo.py  random_bot.py
wallz_ai/browser/: action_executor.py  state_reader.py  wallz_browser_adapter.py
wallz_ai/env/: __init__.py  action_space.py  pathfinding.py  rules.py  wallz_env.py
wallz_ai/training/: evaluate.py  replay_buffer.py  self_play.py  train.py
